<resources>
    <string name="app_name">Go Bang</string>
    <string name="single_game">Single Game</string>
    <string name="two_player_fight">Two-Player Fight</string>
    <string name="about">About</string>
    <string name="bt_main_logout">Logout</string>
    <string name="OldUserName">Gobang</string>
    <string name="OldPassword">123456</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="Role_black">Black Player</string>
    <string name="Role_white">White Player</string>
    <string name="agree">Agree</string>
    <string name="reject">Reject</string>
    <string name="fight_request">ask for fight with you</string>
    <string name="connections">Connections</string>
    <string name="chat_send">Send</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="restart">New Game</string>
    <string name="rollback">Rollback</string>
    <string name="exit">Exit</string>
    <string name="equal">Equal</string>
    <string name="fail">Fail</string>
    <string name="myself">Me</string>
    <string name="challenger">Challenger</string>
    <string name="computer">Computer</string>
    <string name="setting">Setting</string>
    <string name="ok">OK</string>
    <string name="Continue">Continue</string>
    <string name="feedback_email">Feedback</string>
    <string name="feedback_success">Send successfully</string>
    <string name="waiting">Processing, please wait…</string>
    <string name="request_content">Please input your feedback</string>
    <string name="request_contact">Please input your contact</string>
    <string name="submit">Submit</string>
    <string name="feedback_contact_hint">Contact number</string>
    <string name="feedback_content_hint">Please input your feedback</string>
    <string name="toast_message">Playback completed</string>
    <string name="buffering_string">Buffering</string>
    <string name="AboutVideo">Tutorial</string>
    <string name="AboutBasic">Basic Function</string>
    <string name="AboutFight">Fight Model</string>
    <string name="AboutSingle">Single Model</string>
    <string name="users_note">User Note</string>
    <string name="privacy_tips">Welcome to PrivacyView! In order to protect your privacy and use security, please read our Terms of Use and Privacy Policy carefully. Do not use this app until you have confirmed your full understanding and agreement. Thank you!</string>
    <string name="privacy_exit">Exit</string>
    <string name="privacy_agree">Agree</string>
    <string name="confirmed">The user note has been confirmed.</string>
    <string name="privacy_tips_key1">Terms of Use</string>
    <string name="privacy_tips_key2">Privacy Policy</string>
    <string name="opt_terms">Terms of Use</string>
    <string name="opt_privacy">Privacy Policy</string>
    <string name="input_captcha">Please enter 4 codes</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="hint_username">Please input username</string>
    <string name="username">Username: </string>
    <string name="btn_clear">Clear</string>
    <string name="password">Password: </string>
    <string name="hint_password">Please input password</string>
    <string name="checkbox_remember_account">Remember account</string>
    <string name="checkbox_auto_login">Auto Login</string>
    <string name="btn_login">Login</string>
    <string name="textbtn_sign_up">Sign Up</string>
    <string name="re_password">Re-Password: </string>
    <string name="hint_re_password">Please enter the password again</string>
    <string name="captcha">Captcha:</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tv_read_and_agree">Have read and agreed with</string>
    <string name="tv_privacy_policy"> Privacy Policy </string>
    <string name="tv_and">and</string>
    <string name="tv_terms_policy"> Terms of Use</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="tutorial_content">Gobang is a two-player board game. Each player has a type of stone, black or white. In each turn, a player places a stone at a corner in the board. The winner must have a line of first five adjacent stones vertically, horizontally, or diagonally. This line must not be blocked at both ends. The edge of the board is considered as a blocked end. In standard mode, a line of six or more adjacent stones does not count. In freestyle mode, a line of six or more adjacent stones is allowed.</string>

</resources>
