<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:filterTouchesWhenObscured="true"
    tools:context=".LoginActivity">

    -

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="340dp"
        android:gravity="center">


        -

        <FrameLayout
            android:id="@+id/usename_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp">

            <EditText
                android:id="@+id/et_loginactivity_username"
                android:layout_width="221dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="100dp"
                android:height="75dp"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLength="20"
                android:paddingLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="#050505"
                android:textSize="18sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/bt_usename_clear"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="right|center_horizontal"
                android:layout_marginTop="5dp"
                android:width="67dp"
                android:background="#485607"
                android:text="@string/btn_clear"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </FrameLayout>


        -

        <FrameLayout
            android:id="@+id/usecode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usename_layout"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="#050505"
                android:textSize="18sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_loginactivity_password"
                android:layout_width="217dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="100dp"
                android:height="75dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="15dp"
                android:visibility="visible" />

            <Button
                android:id="@+id/bt_pwd_clear"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="right|center_horizontal"
                android:layout_marginTop="5dp"
                android:width="67dp"
                android:background="#485607"
                android:text="@string/btn_clear"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </FrameLayout>

        <CheckBox
            android:id="@+id/check_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usecode_layout"
            android:layout_marginTop="7dp"
            android:text="@string/checkbox_remember_account" />

        <CheckBox
            android:id="@+id/check_autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usecode_layout"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:text="@string/checkbox_auto_login" />

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_below="@id/usecode_layout"
            android:layout_marginTop="50dp"
            android:background="#ff336699"
            android:backgroundTint="#ff485607"
            android:gravity="center"
            android:onClick="run"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/tv_loginactivity_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_alignRight="@id/login"
            android:layout_marginTop="7dp"
            android:background="#00000000"
            android:text="@string/textbtn_sign_up"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:clickable="true" />

    </RelativeLayout>

</RelativeLayout>