<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebg">

    <LinearLayout
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/single"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/btn_bg"
            android:text="@string/single_game"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/fight"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/btn_bg"
            android:text="@string/two_player_fight"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/btn_bg"
            android:text="@string/about"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="171dp"
        android:layout_height="67dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/btn_bg"
        android:text="@string/bt_main_logout"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="171dp"
        android:layout_height="67dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_bg"
        android:text="@string/feedback_email"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch_music"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_music"
        android:layout_width="30dp"
        android:layout_height="52dp"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toStartOf="@+id/switch_music"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_voice_on" />

</androidx.constraintlayout.widget.ConstraintLayout>