<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <!--detail Tab-->
        <TextView
            android:id="@+id/AboutSingle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/AboutSingle"
            android:textColor="@color/main_tab_text_color"
            android:textSize="20dp" />

        <!--detail Tab-->
        <TextView
            android:id="@+id/AboutFight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/AboutFight"
            android:textColor="@color/main_tab_text_color"
            android:textSize="20dp" />

        <!--detail Tab-->
        <TextView
            android:id="@+id/AboutBasic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/AboutBasic"
            android:textColor="@color/main_tab_text_color"
            android:textSize="20dp" />

        <!--category report Tab-->
        <TextView
            android:id="@+id/AboutVideo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/AboutVideo"
            android:textColor="@color/main_tab_text_color"
            android:textSize="20dp" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>